# shellac-webview

./: pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
shellac/: __init__.py  enums.py  models.py  window.py
src/: test.py
src/shellac/: __init__.py  launcher.py  models.py  window.py
