[project]
name = "shellac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sharkow", email = "sharkow1743@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
shellac = "shellac:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
