[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellac-webview"
version = "1.6.2"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Sharkow1743", email = "Sharkow1743@users.noreply.github.com" }
]
dependencies = ["fastapi", "uvicorn", "pydantic", "selenium", "undetected-chromedriver", "undetected-geckodriver-lw", "setuptools"]

[project.urls]
"Homepage" = "https://github.com/Sharkow1743/shellac-webview"
"Bug Tracker" = "https://github.com/Sharkow1743/shellac-webview/issues"

[tool.setuptools.packages.find]
where = ["src"]
